--- a/view/articlesDetail_bak220117.html
+++ b/view/articlesDetail_bak220117.html
@@ -8,10 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
-    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
-    <script src="/static/component/copyright.js"></script>
 </head>
 
 <body class="bg">
@@ -19,10 +16,10 @@
         {{template "nav.html" .}}
     </div>
     <div class="container page">
-        <div class="art-dtl-pd bg-white rounded-3 shadow-sm mt-4 lh-lg">
-            <div class="fs32 fs600 clr2">{{.view.Title}}</div>
-            <p class="f18 clr2-2">{{.view.Ctime}}</p>
-            <div class="fs16 clr2">
+        <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
+            <h3>{{.view.Title}}</h3>
+            <p class="f12 text-muted">{{.view.Ctime}}</p>
+            <div>
                 {{.body}}
             </div>
         </div>
@@ -33,15 +30,11 @@
             <a class="px-3" href=""><i class="bi bi-medium"></i></a>
             <a class="px-3" href=""><i class="bi bi-github"></i></a>
         </div>
-        <!-- <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
+        <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
             <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
-        </div> -->
-        <div id="copy_right"><copy-right /></div>
+        </div>
     </div>
 </body>
-<script type="text/javascript">
-    new Vue({ el: "#copy_right" });
-</script>
 
 </html>
