--- a/view/articlesPage_bak220117.html
+++ b/view/articlesPage_bak220117.html
@@ -20,14 +20,14 @@
         
         {{range $i, $v := .articleList}}
         <a href="/view/{{$v.ID}}" class="art-a">
-        <div class="art-pd bg-white rounded-3 shadow-sm mt-4 lh-lg">
+        <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
+            <h4 class="mb-4">{{$v.Title}}</h4>
             <div class="row">
                 <div class="col-md-8 pos-re">
-                    <div class="fs28 fs600 clr2 mb-3">{{$v.Title}}</div>
-                    <p class="fs16 clr2-1 art-p-cnt overflow-hidden">{{$v.Content}}</p>
-                    <div class="fs16 clr2-2 pos-ab">Otc 3 · 3 min read</div>  
+                    <p class="art-p-cnt">{{$v.Content}}</p>
+                    <!-- <div class="text-muted fs-7 pos-ab">Otc 3 · 3 min read</div>   -->
                 </div>
-                <div class="col-md-4 al-rt">
+                <div class="col-md-4 text-center">
                     <div class="article-cover">
                         <img class="img-fluid" src="{{$v.Pic}}" alt="">
                     </div>
@@ -36,9 +36,7 @@
         </div>
         </a>
         {{end}}      
-        <div class="text-center mt-5">
-            <a class="fs18 clr2 text-decoration-none" href="/articles?page={{.page}}">See More...</a>
-        </div>        
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/articles?page={{.page}}">More...</a></div>        
     
         {{template "footer.html" .}}
     </div>
